// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cosmos Extension should allow resourced to be created in portal 1`] = `
Object {
  "Description": "Cosmos Extension: Singleton resources for the Cosmos, like CdkRepo and EcrRepo",
  "Resources": Object {
    "CdkRepo": Object {
      "Properties": Object {
        "RepositoryDescription": "App CDK Repo for Test Cosmos.",
        "RepositoryName": "app-test-cdk-repo",
        "Tags": Array [
          Object {
            "Key": "cosmos:extension",
            "Value": "Test",
          },
        ],
      },
      "Type": "AWS::CodeCommit::Repository",
    },
    "RootZoneTest": Object {
      "Properties": Object {
        "HostedZoneId": Object {
          "Fn::ImportValue": "CoreRootZoneId",
        },
        "Name": Object {
          "Fn::Join": Array [
            "",
            Array [
              "test.",
              Object {
                "Fn::ImportValue": "CoreRootZoneName",
              },
              ".",
            ],
          ],
        },
        "ResourceRecords": Array [
          "test",
        ],
        "TTL": "1800",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
  },
}
`;

exports[`Cosmos Extension should match snapshot 1`] = `
Object {
  "Description": "Cosmos Extension: Singleton resources for the Cosmos, like CdkRepo and EcrRepo",
  "Resources": Object {
    "CdkRepo": Object {
      "Properties": Object {
        "RepositoryDescription": "App CDK Repo for Test Cosmos.",
        "RepositoryName": "app-test-cdk-repo",
        "Tags": Array [
          Object {
            "Key": "cosmos:extension",
            "Value": "Test",
          },
        ],
      },
      "Type": "AWS::CodeCommit::Repository",
    },
  },
}
`;

exports[`Cosmos should match snapshot 1`] = `
Object {
  "Description": "Cosmos: Singleton resources for the Cosmos, like RootZone, CdkRepo and CdkMasterRole",
  "Outputs": Object {
    "CdkRepoRepoName": Object {
      "Export": Object {
        "Name": "CoreCdkRepoName",
      },
      "Value": Object {
        "Fn::GetAtt": Array [
          "CdkRepo",
          "Name",
        ],
      },
    },
    "CoreLibVersion": Object {
      "Export": Object {
        "Name": "CoreLibVersion",
      },
      "Value": Any<String>,
    },
    "CrossAccountExportServiceToken": Object {
      "Export": Object {
        "Name": "CoreCrossAccountExportServiceToken",
      },
      "Value": Object {
        "Fn::GetAtt": Array [
          "CustomCrossAccountExportsCustomResourceProviderHandler",
          "Arn",
        ],
      },
    },
    "RootZoneNameServers": Object {
      "Export": Object {
        "Name": "CoreRootZoneNameServers",
      },
      "Value": Object {
        "Fn::Join": Array [
          ",",
          Object {
            "Fn::GetAtt": Array [
              "RootZone",
              "NameServers",
            ],
          },
        ],
      },
    },
    "RootZoneZoneId": Object {
      "Export": Object {
        "Name": "CoreRootZoneId",
      },
      "Value": Object {
        "Ref": "RootZone",
      },
    },
    "RootZoneZoneName": Object {
      "Export": Object {
        "Name": "CoreRootZoneName",
      },
      "Value": "cos.com",
    },
  },
  "Resources": Object {
    "CdkMasterRole": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": Array [
                  "codebuild.amazonaws.com",
                  "codepipeline.amazonaws.com",
                  "lambda.amazonaws.com",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/AdministratorAccess",
              ],
            ],
          },
        ],
        "RoleName": "CoreCdkMasterRole",
        "Tags": Array [
          Object {
            "Key": "cosmos",
            "Value": "Cos",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CdkRepo": Object {
      "Properties": Object {
        "RepositoryDescription": "Core CDK Repo for Cos Cosmos.",
        "RepositoryName": "core-cos-cdk-repo",
        "Tags": Array [
          Object {
            "Key": "cosmos",
            "Value": "Cos",
          },
        ],
      },
      "Type": "AWS::CodeCommit::Repository",
    },
    "CustomCrossAccountExportsCustomResourceProviderHandler": Object {
      "DependsOn": Array [
        "CdkMasterRole",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "sourceHash.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CdkMasterRole",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "RootZone": Object {
      "Properties": Object {
        "HostedZoneConfig": Object {
          "Comment": "Core TLD Root Zone for Cos Cosmos.",
        },
        "HostedZoneTags": Array [
          Object {
            "Key": "cosmos",
            "Value": "Cos",
          },
        ],
        "Name": "cos.com.",
      },
      "Type": "AWS::Route53::HostedZone",
    },
  },
}
`;
